--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -4,7 +4,7 @@
     <a href="/dashboard"><i class="fas fa-home"></i> Home</a>
     <a href="/search"><i class="fas fa-search"></i> Search</a>
     <a href="#"><i class="fas fa-compass"></i> Explore</a>
-    <a href="#"><i class="far fa-play-circle"></i> Reels</a>
+    <a href="/reels/upload"><i class="far fa-play-circle"></i> Reels</a>
     <a href="/chat"><i class="far fa-paper-plane"></i> Messages</a>
 
     <div class="notification-wrapper">
