--- a/views/chatList.ejs
+++ b/views/chatList.ejs
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
+  <%- include('partials/header', { title: 'Search Profile' }) %>
+        <%- include('partials/sidebar') %>
   <div class="chat-list-container">
     <h2>Messages</h2>
     <% if (conversations.length === 0) { %>
