--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
   <title>
     <%= title %>
   </title>
+  <link rel="icon" type="image/jpg" href="https://cdn.pixabay.com/photo/2016/08/09/17/52/instagram-1581266_1280.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="/css/profile.css" />
