--- a/views/storyViewer.ejs
+++ b/views/storyViewer.ejs
@@ -62,7 +62,7 @@
                     }
                 }
 
-                const duration = 15000;
+                const duration = 1500000;
                 const progressFill = document.getElementById('progressFill');
 
                 function startProgressBar() {
