--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,12 @@
   </title>
   <link rel="icon" type="image/jpg" href="https://cdn.pixabay.com/photo/2016/08/09/17/52/instagram-1581266_1280.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css" />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Billabong&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/css/profile.css" />
   <link rel="stylesheet" href="/css/setting.css" />
   <link rel="stylesheet" href="/css/register.css" />
